# Floton

./: .gitignore  CMakeLists.txt  CameraPictureTaker.cpp  CameraPictureTaker.h  CameraSpecifications.h  LICENSE  Light.h  Lighting.h  Makefile  Object3D.cpp  Object3D.h  README.md  Ray.cpp  Ray.h  Sphere.h  Transformation.cpp  Transformation.h  Triangle.cpp  Triangle.h  main.cpp
ExampleRenderFiles/: CircularReality.txt  ground.mtl
WorkingDirectory/: Untitled.mtl  car_no_ground.mtl  checker.mtl  cowHitByCar.mtl  d00attchk.txt  driver00.txt  driver01.txt  driver02.txt  driver03.txt  driver04.txt  driverNotes.txt  refractionTest.txt
WorkingDirectory/old/: cube_centered.mtl  driver00.txt  driver01.txt  driver05.txt  raytracer
WorkingDirectory/pa2/: callgrind.out.4504  driver00.txt  driver01.txt  driver02.txt  driver03.txt  driver04.txt  driver05.txt
WorkingDirectory/pa3/: cow.mtl  cube.mtl  driver02.txt  driver03.txt  driver04.txt
WorkingDirectory/renders/: carWithGround.ppm
src/: CameraPictureTaker.cpp  CameraPictureTaker.h  CameraSpecifications.h  DriverParser.cpp  DriverParser.h  Light.h  Material.cpp  Material.h  Object3D.cpp  Object3D.h  RayTraceData.cpp  RayTraceData.h  Triangle.h
